Choose country and language

--- a/assets/i18n/prelogin.en.json
+++ b/assets/i18n/prelogin.en.json
@@ -1,14 +1,48 @@
 {
   "app.title": "SpeedBook",
-  "phone.get_started_with": "Get started with",
+
+  "phone.title_top": "Get started with",
+  "phone.title_app": "SpeedBook driver",
+  "phone.hint": "Mobile number",
   "phone.register": "Register",
-  "phone.mobile_number": "Mobile number",
+  "phone.enter_number": "Enter phone number",
+  "phone.verification_failed": "Verification failed",
+  "phone.failed_start": "Failed to start verification",
+  "phone.terms.caption": "By logging in or registering you agree to our Terms of Service and Privacy Policy",
+  "phone.terms.link": "Terms and Conditions",
+  "phone.privacy.link": "Privacy Policy",
   "phone.search_country": "Search country or code",
-  "terms.title": "Terms and Conditions",
-  "privacy.title": "Privacy Policy",
+
+  "sms.title": "Enter the code from the push\nnotification",
+  "sms.check_push": "Check your push notifications",
+  "sms.enter_digits": "Enter 6 digits",
+  "sms.next": "Next",
+  "sms.get_new_code": "Get a new code",
+  "sms.resend_error": "Error resending code",
+  "sms.signin_failed": "Sign-in failed",
+  "sms.code_expired": "Code expired. Please resend.",
+
+  "common.success": "Success!",
+  "common.timeout": "Server timeout",
+  "common.error": "Error",
+  "common.backend_error": "Backend error",
+  "common.api_url_missing": "API URL not available",
+  "common.unknown_error": "Unknown error",
+
   "btn.book": "Book",
   "from.select": "From where?",
   "where.to.go": "Where to?",
   "tracking.on": "Tracking On",
-  "tracking.off": "Tracking Off"
+  "tracking.off": "Tracking Off",
+  "onboarding.title": "Let’s set things up",
+  "onboarding.subtitle": "Choose your language and country. We’ll also ask to enable notifications.",
+  "onboarding.language": "Language",
+  "onboarding.country": "Country",
+  "onboarding.continue": "Continue",
+  "onboarding.skip": "Not now",
+  "push.title": "Enable notifications",
+  "push.subtitle": "So we can notify you about orders, status changes and messages.",
+  "push.allow": "Allow notifications",
+  "push.later": "Not now",
+  "common.hide": "Hide"
 }
