--- a/assets/i18n/prelogin.km.json
+++ b/assets/i18n/prelogin.km.json
@@ -1,14 +1,48 @@
 {
   "app.title": "SpeedBook",
-  "phone.get_started_with": "ចាប់ផ្តើមជាមួយ",
+
+  "phone.title_top": "ចាប់ផ្តើមជាមួយ",
+  "phone.title_app": "SpeedBook driver",
+  "phone.hint": "លេខទូរស័ព្ទ",
   "phone.register": "ចុះឈ្មោះ",
-  "phone.mobile_number": "លេខទូរស័ព្ទ",
-  "phone.search_country": "ស្វែងរកប្រទេស ឬ កូដ",
-  "terms.title": "ល័ក្ខខណ្ឌនិងកិច្ចព្រមព្រៀង",
-  "privacy.title": "គោលការណ៍ឯកជនភាព",
+  "phone.enter_number": "បញ្ចូលលេខទូរស័ព្ទ",
+  "phone.verification_failed": "បរាជ័យក្នុងការផ្ទៀងផ្ទាត់",
+  "phone.failed_start": "មិនអាចចាប់ផ្តើមការផ្ទៀងផ្ទាត់",
+  "phone.terms.caption": "ដោយចូល ឬចុះឈ្មោះ អ្នកយល់ព្រមនឹងលក្ខខណ្ឌ និងគោលការណ៍ឯកជនភាពរបស់យើង",
+  "phone.terms.link": "លក្ខខណ្ឌនិងកិច្ចព្រមព្រៀង",
+  "phone.privacy.link": "គោលការណ៍ឯកជនភាព",
+  "phone.search_country": "ស្វែងរកប្រទេស ឬកូដ",
+
+  "sms.title": "បញ្ចូលកូដពីការជូនដំណឹង",
+  "sms.check_push": "ពិនិត្យការជូនដំណឹង push របស់អ្នក",
+  "sms.enter_digits": "បញ្ចូលលេខ ៦ ខ្ទង់",
+  "sms.next": "បន្ទាប់",
+  "sms.get_new_code": "ទទួលលេខកូដថ្មី",
+  "sms.resend_error": "កំហុសពេលផ្ញើកូដម្តងទៀត",
+  "sms.signin_failed": "ការចូលបានបរាជ័យ",
+  "sms.code_expired": "លេខកូដផុតកំណត់។ សូមផ្ញើម្តងទៀត។",
+
+  "common.success": "ជោគជ័យ!",
+  "common.timeout": "អស់ពេលស្នើសុំ",
+  "common.error": "កំហុស",
+  "common.backend_error": "កំហុសម៉ាស៊ីនមេ",
+  "common.api_url_missing": "API URL មិនមាន",
+  "common.unknown_error": "កំហុសមិនស្គាល់",
+
   "btn.book": "កក់",
   "from.select": "ពីណា?",
   "where.to.go": "ទៅណា?",
   "tracking.on": "បានបើកការតាមដាន",
-  "tracking.off": "បានបិទការតាមដាន"
+  "tracking.off": "បានបិទការតាមដាន",
+  "onboarding.title": "ចូររៀបចំកម្មវិធី",
+  "onboarding.subtitle": "ជ្រើសរើសភាសា និងប្រទេស ហើយយើងនឹងស្នើសុំអនុញ្ញាតការជូនដំណឹងផងដែរ។",
+  "onboarding.language": "ភាសា",
+  "onboarding.country": "ប្រទេស",
+  "onboarding.continue": "បន្ត",
+  "onboarding.skip": "មិនមែនឥឡូវនេះ",
+  "push.title": "បើកការជូនដំណឹង",
+  "push.subtitle": "ដើម្បីឱ្យយើងអាចជូនដំណឹងអំពីការកម្មង់ ការផ្លាស់ប្តូរស្ថានភាព និងសារ។",
+  "push.allow": "អនុញ្ញាតការជូនដំណឹង",
+  "push.later": "មិនមែនឥឡូវនេះ",
+  "common.hide": "លាក់"
 }
