--- a/assets/i18n/prelogin.ru.json
+++ b/assets/i18n/prelogin.ru.json
@@ -1,14 +1,48 @@
 {
   "app.title": "SpeedBook",
-  "phone.get_started_with": "Начните со",
+
+  "phone.title_top": "Начните со",
+  "phone.title_app": "SpeedBook driver",
+  "phone.hint": "Номер телефона",
   "phone.register": "Зарегистрироваться",
-  "phone.mobile_number": "Номер телефона",
+  "phone.enter_number": "Введите номер телефона",
+  "phone.verification_failed": "Сбой подтверждения",
+  "phone.failed_start": "Не удалось начать подтверждение",
+  "phone.terms.caption": "Входя или регистрируясь, вы соглашаетесь с Условиями использования и Политикой конфиденциальности",
+  "phone.terms.link": "Условия использования",
+  "phone.privacy.link": "Политика конфиденциальности",
   "phone.search_country": "Поиск страны или кода",
-  "terms.title": "Пользовательское соглашение",
-  "privacy.title": "Политика конфиденциальности",
+
+  "sms.title": "Введите код из push-уведомления",
+  "sms.check_push": "Проверьте ваши push-уведомления",
+  "sms.enter_digits": "Введите 6 цифр",
+  "sms.next": "Далее",
+  "sms.get_new_code": "Получить новый код",
+  "sms.resend_error": "Ошибка при повторной отправке кода",
+  "sms.signin_failed": "Ошибка входа",
+  "sms.code_expired": "Срок действия кода истёк. Отправьте новый.",
+
+  "common.success": "Готово!",
+  "common.timeout": "Время ожидания истекло",
+  "common.error": "Ошибка",
+  "common.backend_error": "Ошибка сервера",
+  "common.api_url_missing": "API URL недоступен",
+  "common.unknown_error": "Неизвестная ошибка",
+
   "btn.book": "Заказать",
   "from.select": "Откуда?",
   "where.to.go": "Куда едем?",
   "tracking.on": "Трекинг включён",
-  "tracking.off": "Трекинг выключен"
+  "tracking.off": "Трекинг выключен",
+  "onboarding.title": "Давайте настроим приложение",
+  "onboarding.subtitle": "Выберите язык и страну. Мы также попросим включить уведомления.",
+  "onboarding.language": "Язык",
+  "onboarding.country": "Страна",
+  "onboarding.continue": "Продолжить",
+  "onboarding.skip": "Не сейчас",
+  "push.title": "Включите уведомления",
+  "push.subtitle": "Чтобы мы могли уведомлять вас о заказах, изменениях статуса и сообщениях.",
+  "push.allow": "Разрешить уведомления",
+  "push.later": "Не сейчас",
+  "common.hide": "Скрыть"
 }
