--- a/assets/i18n/prelogin.km.json
+++ b/assets/i18n/prelogin.km.json
@@ -21,6 +21,13 @@
   "sms.signin_failed": "ការចូលបានបរាជ័យ",
   "sms.code_expired": "លេខកូដផុតកំណត់។ សូមផ្ញើម្តងទៀត។",
 
+  "sms.code_invalid": "លេខកូដដែលអ្នកបញ្ចូលមិនត្រឹមត្រូវទេ។",
+  "sms.session_expired": "សម័យផ្ទៀងផ្ទាត់បានផុតកំណត់។ សូមស្នើលេខកូដថ្មី។",
+  "sms.too_many_requests": "មានការប៉ុនប៉ងច្រើនពេក។ សូមព្យាយាមម្តងទៀតក្រោយមួយភ្លែត។",
+  "sms.quota_exceeded": "បានលើសកូតាផ្ទៀងផ្ទាត់។ សូមព្យាយាមម្តងទៀតក្រោយមួយភ្លែត។",
+  "sms.app_check_failed": "ការផ្ទៀងផ្ទាត់កម្មវិធីបរាជ័យ។ សូមព្យាយាមម្តងទៀត។",
+  "common.network_error": "បញ្ហាបណ្តាញ។ សូមពិនិត្យការតភ្ជាប់របស់អ្នក។",
+
   "common.success": "ជោគជ័យ!",
   "common.timeout": "អស់ពេលស្នើសុំ",
   "common.error": "កំហុស",
