--- a/assets/i18n/prelogin.km.json
+++ b/assets/i18n/prelogin.km.json
@@ -1,5 +1,11 @@
 {
-  "app.title": "SpeedBook",
+  "onboarding.title": "ចូររៀបចំកម្មវិធី",
+  "onboarding.subtitle": "ជ្រើសរើសភាសា និងប្រទេស។ អ្នកអាចប្តូរវាបាននៅក្នុងការកំណត់ពេលក្រោយ។",
+  "onboarding.language": "ភាសា",
+  "onboarding.country": "ប្រទេស",
+  "onboarding.continue": "បន្ត",
+  "onboarding.skip": "មិនមែនឥឡូវនេះ",
+
   "phone.hero.prefix": "ធ្វើឱ្យការធ្វើដំណើរនៅកម្ពុជា មានផាសុខភាព និងមានសុវត្ថិភាព ក្នុងតម្លៃល្អបំផុត ជាមួយ ",
   "phone.hero.brand": "SpeedBook!",
   "phone.hint": "លេខទូរស័ព្ទ",
@@ -11,7 +17,8 @@
   "phone.terms.link": "លក្ខខណ្ឌនិងកិច្ចព្រមព្រៀង",
   "phone.privacy.link": "គោលការណ៍ឯកជនភាព",
   "phone.search_country": "ស្វែងរកប្រទេស ឬកូដ",
-  "phone.established": "បង្កើតនៅកម្ពុជា"m,
+  "phone.established": "បង្កើតនៅកម្ពុជា",
+
   "sms.title": "បញ្ចូលកូដពីការជូនដំណឹង",
   "sms.check_push": "ពិនិត្យការជូនដំណឹង push របស់អ្នក",
   "sms.enter_digits": "បញ្ចូលលេខ ៦ ខ្ទង់",
@@ -20,35 +27,59 @@
   "sms.resend_error": "កំហុសពេលផ្ញើកូដម្តងទៀត",
   "sms.signin_failed": "ការចូលបានបរាជ័យ",
   "sms.code_expired": "លេខកូដផុតកំណត់។ សូមផ្ញើម្តងទៀត។",
-
   "sms.code_invalid": "លេខកូដដែលអ្នកបញ្ចូលមិនត្រឹមត្រូវទេ។",
   "sms.session_expired": "សម័យផ្ទៀងផ្ទាត់បានផុតកំណត់។ សូមស្នើលេខកូដថ្មី។",
   "sms.too_many_requests": "មានការប៉ុនប៉ងច្រើនពេក។ សូមព្យាយាមម្តងទៀតក្រោយមួយភ្លែត។",
   "sms.quota_exceeded": "បានលើសកូតាផ្ទៀងផ្ទាត់។ សូមព្យាយាមម្តងទៀតក្រោយមួយភ្លែត។",
   "sms.app_check_failed": "ការផ្ទៀងផ្ទាត់កម្មវិធីបរាជ័យ។ សូមព្យាយាមម្តងទៀត។",
+
+  "home.title": "ទំព័រដើម",
+  "home.load_failed": "មិនអាចផ្ទុកទិន្នន័យបានទេ",
+  "home.rating": "ការវាយតម្លៃ",
+  "home.accounts.title": "គណនីរបស់អ្នក",
+  "home.accounts.empty": "រកមិនឃើញគណនីទេ",
+  "home.account.default_name": "គណនី",
+  "home.account.id": "លេខសម្គាល់",
+  "home.verification.title": "ស្ថានភាពផ្ទៀងផ្ទាត់",
+  "home.verification.need": "ត្រូវការការផ្ទៀងផ្ទាត់",
+  "home.verification.pending": "ឯកសារកំពុងពិនិត្យ",
+  "home.verification.verified": "បានផ្ទៀងផ្ទាត់",
+  "home.verification.rejected": "បានបដិសេធការផ្ទៀងផ្ទាត់",
+  "home.verification.rejected_reason": "ហេតុផល",
+
+  "common.retry": "ព្យាយាមម្ដងទៀត",
+  "common.timeout": "ពេលវេលាអស់ហើយ។ សូមព្យាយាមម្ដងទៀត។",
+  "common.error": "កំហុស",
+  "common.success": "ជោគជ័យ!",
+  "common.hide": "លាក់",
   "common.network_error": "បញ្ហាបណ្តាញ។ សូមពិនិត្យការតភ្ជាប់របស់អ្នក។",
 
-  "common.success": "ជោគជ័យ!",
-  "common.timeout": "អស់ពេលស្នើសុំ",
-  "common.error": "កំហុស",
-  "common.backend_error": "កំហុសម៉ាស៊ីនមេ",
-  "common.api_url_missing": "API URL មិនមាន",
-  "common.unknown_error": "កំហុសមិនស្គាល់",
+  "verification.title": "ការផ្ទៀងផ្ទាត់",
+  "verification.open": "ចាប់ផ្តើមការផ្ទៀងផ្ទាត់",
+  "verification.submit": "ដាក់ស្នើឯកសារ",
+  "verification.snackbar.sent": "ឯកសារត្រូវបានផ្ញើសម្រាប់ពិនិត្យ",
+  "verification.error.timeout": "អស់ពេល។ សូមព្យាយាមម្ដងទៀត។",
+  "verification.error.capture": "កំហុសពេលថតរូប",
 
-  "btn.book": "កក់",
-  "from.select": "ពីណា?",
-  "where.to.go": "ទៅណា?",
-  "tracking.on": "បានបើកការតាមដាន",
-  "tracking.off": "បានបិទការតាមដាន",
-  "onboarding.title": "ចូររៀបចំកម្មវិធី",
-  "onboarding.subtitle": "ជ្រើសរើសភាសា និងប្រទេស ហើយយើងនឹងស្នើសុំអនុញ្ញាតការជូនដំណឹងផងដែរ។",
-  "onboarding.language": "ភាសា",
-  "onboarding.country": "ប្រទេស",
-  "onboarding.continue": "បន្ត",
-  "onboarding.skip": "មិនមែនឥឡូវនេះ",
-  "push.title": "បើកការជូនដំណឹង",
-  "push.subtitle": "ដើម្បីឱ្យយើងអាចជូនដំណឹងអំពីការកម្មង់ ការផ្លាស់ប្តូរស្ថានភាព និងសារ។",
-  "push.allow": "អនុញ្ញាតការជូនដំណឹង",
-  "push.later": "មិនមែនឥឡូវនេះ",
-  "common.hide": "លាក់"
+  "verification.name.label": "ឈ្មោះពេញ",
+  "verification.name.hint": "បញ្ចូលឈ្មោះពេញរបស់អ្នក",
+  "verification.name.error.empty": "ឈ្មោះមិនអាចទទេបានទេ",
+  "verification.name.error.short": "ឈ្មោះខ្លីពេក",
+
+  "verification.step.data.title": "ទិន្នន័យផ្ទាល់ខ្លួន",
+
+  "verification.step.passport.title": "រូបថតលិខិតឆ្លងដែន",
+  "verification.step.passport.hint": "ឯកសារត្រូវតែជាដើម មានសុពលភាព និងមិនផុតកំណត់។",
+
+  "verification.step.license.title": "បណ្ណបើកបរ",
+  "verification.step.license.hint": "ឯកសារត្រូវតែជាដើម មានសុពលភាព និងមិនផុតកំណត់។",
+
+  "verification.step.selfie.title": "សែលហ្វីជាមួយលិខិតឆ្លងដែន",
+  "verification.step.selfie.subtitle": "សូមធានាថាមុខរបស់អ្នកមើលឃើញច្បាស់",
+  "verification.step.selfie.hint": "មិនពាក់មួក មិនពាក់វ៉ែនតា ហើយលិខិតឆ្លងដែនត្រូវអាចអានបាន។",
+
+  "verification.doc.hint.valid": "ឯកសារត្រូវតែជាដើម និងមានសុពលភាព",
+  "verification.photo.empty": "មិនទាន់មានរូបថត",
+  "verification.photo.take": "ថតរូប",
+  "verification.photo.retake": "ថតម្ដងទៀត"
 }
