--- a/assets/i18n/prelogin.en.json
+++ b/assets/i18n/prelogin.en.json
@@ -1,21 +1,25 @@
 {
-  "app.title": "SpeedBook",
+  "onboarding.title": "Let’s set things up",
+  "onboarding.subtitle": "Choose your language and country. You can change them later in settings.",
+  "onboarding.language": "Language",
+  "onboarding.country": "Country",
+  "onboarding.continue": "Continue",
+  "onboarding.skip": "Not now",
 
   "phone.hero.prefix": "Making traveling in Cambodia comfortable and safe at the best price with ",
   "phone.hero.brand": "SpeedBook!",
-  "phone.register": "Register",
   "phone.hint": "Mobile number",
+  "phone.register": "Register",
   "phone.enter_number": "Enter phone number",
   "phone.verification_failed": "Verification failed",
   "phone.failed_start": "Failed to start verification",
-  "phone.terms.caption": "By logging in our registering you agree to our Terms of Service and Privacy Policy",
+  "phone.terms.caption": "By logging in or registering you agree to our Terms of Service and Privacy Policy",
   "phone.terms.link": "Terms and Conditions",
   "phone.privacy.link": "Privacy Policy",
   "phone.search_country": "Search country or code",
   "phone.established": "Established in Cambodia",
 
-
-  "sms.title": "Enter the code from the push\nnotification",
+  "sms.title": "Enter the code from the push notification",
   "sms.check_push": "Check your push notifications",
   "sms.enter_digits": "Enter 6 digits",
   "sms.next": "Next",
@@ -23,36 +27,59 @@
   "sms.resend_error": "Error resending code",
   "sms.signin_failed": "Sign-in failed",
   "sms.code_expired": "Code expired. Please resend.",
-
   "sms.code_invalid": "The code you entered is invalid.",
   "sms.session_expired": "The verification session has expired. Please request a new code.",
   "sms.too_many_requests": "Too many attempts. Please try again later.",
   "sms.quota_exceeded": "The verification quota has been exceeded. Please try again later.",
   "sms.app_check_failed": "App verification failed. Please try again.",
+
+  "home.title": "Home",
+  "home.load_failed": "Failed to load data",
+  "home.rating": "Rating",
+  "home.accounts.title": "Your accounts",
+  "home.accounts.empty": "No accounts found",
+  "home.account.default_name": "Account",
+  "home.account.id": "id",
+  "home.verification.title": "Verification status",
+  "home.verification.need": "Verification required",
+  "home.verification.pending": "Documents are being checked",
+  "home.verification.verified": "Verified",
+  "home.verification.rejected": "Verification rejected",
+  "home.verification.rejected_reason": "Reason",
+
+  "common.retry": "Retry",
+  "common.timeout": "Request timed out. Please try again.",
+  "common.error": "Error",
+  "common.success": "Success!",
+  "common.hide": "Hide",
   "common.network_error": "Network error. Please check your connection.",
 
-  "common.success": "Success!",
-  "common.timeout": "Server timeout",
-  "common.error": "Error",
-  "common.backend_error": "Backend error",
-  "common.api_url_missing": "API URL not available",
-  "common.unknown_error": "Unknown error",
+  "verification.title": "Verification",
+  "verification.open": "Start verification",
+  "verification.submit": "Submit verification",
+  "verification.snackbar.sent": "Documents sent for review",
+  "verification.error.timeout": "Request timed out. Please try again.",
+  "verification.error.capture": "Capture error",
 
+  "verification.name.label": "Full name",
+  "verification.name.hint": "Enter your full name",
+  "verification.name.error.empty": "Name cannot be empty",
+  "verification.name.error.short": "Name is too short",
 
-  "btn.book": "Book",
-  "from.select": "From where?",
-  "where.to.go": "Where to?",
-  "tracking.on": "Tracking On",
-  "tracking.off": "Tracking Off",
-  "onboarding.title": "Let’s set things up",
-  "onboarding.subtitle": "Choose your language and country. We’ll also ask to enable notifications.",
-  "onboarding.language": "Language",
-  "onboarding.country": "Country",
-  "onboarding.continue": "Continue",
-  "onboarding.skip": "Not now",
-  "push.title": "Enable notifications",
-  "push.subtitle": "So we can notify you about orders, status changes and messages.",
-  "push.allow": "Allow notifications",
-  "push.later": "Not now",
-  "common.hide": "Hide"
+  "verification.step.data.title": "Personal data",
+
+  "verification.step.passport.title": "Passport photo",
+  "verification.step.passport.hint": "The document must be original, valid, not expired.",
+
+  "verification.step.license.title": "Driver license",
+  "verification.step.license.hint": "The document must be original, valid, not expired.",
+
+  "verification.step.selfie.title": "Selfie with passport",
+  "verification.step.selfie.subtitle": "Make sure your face is clearly visible",
+  "verification.step.selfie.hint": "No hats, no glasses, passport must be readable.",
+
+  "verification.doc.hint.valid": "Documents must be original and valid",
+  "verification.photo.empty": "No photo yet",
+  "verification.photo.take": "Take photo",
+  "verification.photo.retake": "Retake"
 }
