--- a/assets/i18n/prelogin.ru.json
+++ b/assets/i18n/prelogin.ru.json
@@ -1,5 +1,10 @@
 {
-  "app.title": "SpeedBook",
+  "onboarding.title": "Давайте настроим приложение",
+  "onboarding.subtitle": "Выберите язык и страну. Позже это можно изменить в настройках.",
+  "onboarding.language": "Язык",
+  "onboarding.country": "Страна",
+  "onboarding.continue": "Продолжить",
+  "onboarding.skip": "Не сейчас",
 
   "phone.hero.prefix": "Сделаем поездки по Камбодже комфортными и безопасными по лучшей цене вместе с ",
   "phone.hero.brand": "SpeedBook!",
@@ -22,35 +27,59 @@
   "sms.resend_error": "Ошибка при повторной отправке кода",
   "sms.signin_failed": "Ошибка входа",
   "sms.code_expired": "Срок действия кода истёк. Отправьте новый.",
-
   "sms.code_invalid": "Неверный код",
   "sms.session_expired": "Сессия подтверждения истекла. Отправьте новый код.",
   "sms.too_many_requests": "Слишком много попыток. Попробуйте позже.",
   "sms.quota_exceeded": "Превышена квота подтверждений. Повторите позже.",
   "sms.app_check_failed": "Ошибка проверки приложения. Попробуйте снова.",
 
-  "common.network_error": "Проблемы с сетью",
-  "common.success": "Готово!",
-  "common.timeout": "Время ожидания истекло",
-  "common.error": "Ошибка",
-  "common.backend_error": "Ошибка сервера",
-  "common.api_url_missing": "API URL недоступен",
-  "common.unknown_error": "Неизвестная ошибка",
+  "home.title": "Главная",
+  "home.load_failed": "Не удалось загрузить данные",
+  "home.rating": "Рейтинг",
+  "home.accounts.title": "Ваши аккаунты",
+  "home.accounts.empty": "Аккаунты не найдены",
+  "home.account.default_name": "Аккаунт",
+  "home.account.id": "идентификатор",
+  "home.verification.title": "Статус верификации",
+  "home.verification.need": "Требуется верификация",
+  "home.verification.pending": "Документы проверяются",
+  "home.verification.verified": "Верифицирован",
+  "home.verification.rejected": "Верификация отклонена",
+  "home.verification.rejected_reason": "Причина",
 
-  "btn.book": "Заказать",
-  "from.select": "Откуда?",
-  "where.to.go": "Куда едем?",
-  "tracking.on": "Трекинг включён",
-  "tracking.off": "Трекинг выключен",
-  "onboarding.title": "Давайте настроим приложение",
-  "onboarding.subtitle": "Выберите язык и страну. Мы также попросим включить уведомления.",
-  "onboarding.language": "Язык",
-  "onboarding.country": "Страна",
-  "onboarding.continue": "Продолжить",
-  "onboarding.skip": "Не сейчас",
-  "push.title": "Включите уведомления",
-  "push.subtitle": "Чтобы мы могли уведомлять вас о заказах, изменениях статуса и сообщениях.",
-  "push.allow": "Разрешить уведомления",
-  "push.later": "Не сейчас",
-  "common.hide": "Скрыть"
+  "common.retry": "Повторить",
+  "common.timeout": "Время ожидания истекло. Попробуйте снова.",
+  "common.error": "Ошибка",
+  "common.success": "Успешно!",
+  "common.hide": "Скрыть",
+  "common.network_error": "Проблемы с сетью",
+
+  "verification.title": "Верификация",
+  "verification.open": "Пройти верификацию",
+  "verification.submit": "Отправить документы",
+  "verification.snackbar.sent": "Документы отправлены на проверку",
+  "verification.error.timeout": "Время ожидания истекло. Попробуйте снова.",
+  "verification.error.capture": "Ошибка при захвате изображения",
+
+  "verification.name.label": "ФИО",
+  "verification.name.hint": "Введите полное имя",
+  "verification.name.error.empty": "Имя не может быть пустым",
+  "verification.name.error.short": "Слишком короткое имя",
+
+  "verification.step.data.title": "Личные данные",
+
+  "verification.step.passport.title": "Фото паспорта",
+  "verification.step.passport.hint": "Документ должен быть оригиналом, действительным и не просроченным.",
+
+  "verification.step.license.title": "Водительское удостоверение",
+  "verification.step.license.hint": "Документ должен быть оригиналом, действительным и не просроченным.",
+
+  "verification.step.selfie.title": "Селфи с паспортом",
+  "verification.step.selfie.subtitle": "Убедитесь, что ваше лицо видно чётко",
+  "verification.step.selfie.hint": "Без головных уборов и очков, паспорт должен быть читаемым.",
+
+  "verification.doc.hint.valid": "Документы должны быть оригинальными и действительными",
+  "verification.photo.empty": "Фото пока нет",
+  "verification.photo.take": "Сделать фото",
+  "verification.photo.retake": "Переснять"
 }
