--- a/assets/i18n/prelogin.ru.json
+++ b/assets/i18n/prelogin.ru.json
@@ -54,12 +54,34 @@
   "home.referral.error": "Не удалось подключить",
   "home.referral.current_prefix": "Пригласил",
   "home.referral.your_id": "Referral ID",
+  "home.car.title": "Машина",
+  "home.car.add": "Добавить машину",
+  "home.car.number": "Номер",
+  "home.car.brand": "Марка",
+  "home.car.model": "Модель",
+  "home.car.book_rental": "Арендовать машину",
+  "home.vehicle.type": "Тип транспорта",
+  "home.vehicle.brand": "Марка",
+  "home.vehicle.model": "Модель",
+  "home.vehicle.color": "Цвет",
+  "home.vehicle.number": "Госномер",
+  "home.vehicle.year": "Год",
+  "home.vehicle.docs": "Документы на машину",
+  "home.vehicle.docs.add_photos": "Добавить из галереи",
+  "home.vehicle.docs.take_photo": "Сделать фото",
+  "home.vehicle.docs.hint": "Загрузите СТС/ПТС, страховку и другие документы",
+  "home.vehicle.docs.add": "Добавить документ",
+  "home.vehicle.docs.take": "Сделать фото документа",
+  "home.vehicle.docs.required": "Пожалуйста, приложите фото хотя бы одного документа",
 
   "home.transactions.title": "Последние транзакции",
   "home.transactions.empty": "Пока нет транзакций",
 
   "common.copy": "Скопировать",
   "common.copied": "Скопировано",
+  "common.fill_all_required": "Заполните все обязательные поля",
+  "common.save": "Сохранить",
+  "common.saved": "Сохранено",
 
   "common.retry": "Повторить",
   "common.timeout": "Время ожидания истекло. Попробуйте снова.",
@@ -97,5 +119,19 @@
   "verification.doc.hint.valid": "Документы должны быть оригинальными и действительными",
   "verification.photo.empty": "Фото пока нет",
   "verification.photo.take": "Сделать фото",
-  "verification.photo.retake": "Переснять"
+  "verification.photo.retake": "Переснять",
+
+  "home.referral.invite_btn": "Пригласить по ссылке",
+  "referral.title": "Пригласить друга",
+  "referral.subtitle": "Поделись ссылкой или QR — вы оба получите бонус",
+  "referral.generating": "Генерируем ссылку…",
+  "referral.your_code": "Ваш код:",
+  "referral.copy_code": "Скопировать код",
+
+  "referral.copy_link": "Скопировать ссылку",
+  "referral.qr_title": "QR для приглашения",
+  "referral.share": "Поделиться",
+  "referral.copied": "Ссылка скопирована",
+  "referral.error": "Не удалось создать ссылку",
+  "referral.share_text": "Поехали со мной в SpeedBook: {link}"
 }
