--- a/assets/i18n/prelogin.en.json
+++ b/assets/i18n/prelogin.en.json
@@ -154,5 +154,9 @@
   "menu.support": "Support",
   "menu.logout": "Log out",
 
-  "common.not_implemented": "Not implemented yet"
+  "common.not_implemented": "Not implemented yet",
+
+  "driving.title": "Driving",
+  "driving.searching": "Searching orders…"
+
 }
